--- a/index.html
+++ b/index.html
@@ -16,10 +16,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Home</title>
+    <style>
+        .homegif svg {
+            position: absolute;
+            top: 0;
+        }
+    </style>
 </head>
 
 <body>
+    <script>
+        AOS.init();
+      </script>
     <div class="header">
         <div class="tophead container-fluid text-end">
             <div class="container">
@@ -145,15 +156,86 @@
 
     </div>
     <section class="homegif">
-        <div class="content">
+        <div>
             <img src="./img/home.gif" alt="">
             <h2>We think brand for trendsetting</h2>
         </div>
+        <?xml version="1.0" encoding="utf-8"?>
+        <!-- Generator: Adobe Illustrator 25.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px" y="0px" viewBox="0 0 1920 1080" style="enable-background:new 0 0 1920 1080;" xml:space="preserve">
+            <style type="text/css">
+                .st0 {
+                    fill: #FFFFFF;
+                }
+            </style>
+            <g>
+                <path class="st0" d="M-1.5-2v1082h1923L1922-2H-1.5z M353.9,562.94c5.12,6.12,12.47,9.19,22.04,9.19
+		c10.35,0,20.37-3.51,30.06-10.52l9.52,22.21c-4.45,4.01-10.33,7.18-17.62,9.52c-7.29,2.34-14.84,3.51-22.63,3.51
+		c-12.36,0-23.13-2.53-32.32-7.6c-9.18-5.06-16.26-12.22-21.21-21.46c-4.96-9.24-7.43-19.93-7.43-32.06
+		c0-12.02,2.48-22.63,7.43-31.81c4.95-9.18,12.02-16.31,21.21-21.38c9.19-5.07,19.96-7.6,32.32-7.6c7.79,0,15.34,1.17,22.63,3.51
+		c7.29,2.34,13.16,5.51,17.62,9.52l-9.52,22.21c-9.69-7.01-19.71-10.52-30.06-10.52c-9.58,0-16.92,3.03-22.04,9.1
+		c-5.12,6.07-7.68,15.06-7.68,26.97C346.22,547.74,348.78,556.82,353.9,562.94z M506.88,555.92H453.6c0.56,6.57,2.45,11.3,5.68,14.2
+		c3.23,2.9,7.96,4.34,14.2,4.34c4.23,0,8.46-0.69,12.69-2.09c4.23-1.39,8.07-3.31,11.52-5.76l7.68,20.04
+		c-4.23,3.12-9.35,5.57-15.36,7.35c-6.01,1.78-12.02,2.67-18.04,2.67c-9.69,0-18.09-1.78-25.22-5.34
+		c-7.13-3.56-12.58-8.66-16.37-15.28c-3.79-6.62-5.68-14.45-5.68-23.46c0-8.57,1.81-16.23,5.43-22.96c3.62-6.74,8.63-12,15.03-15.78
+		c6.4-3.78,13.72-5.68,21.96-5.68c8.02,0,15.03,1.78,21.04,5.34c6.01,3.56,10.63,8.66,13.86,15.28c3.23,6.63,4.84,14.34,4.84,23.13
+		V555.92z M607.58,595.34h-30.23v-49.27c0-5.23-0.89-8.99-2.67-11.27c-1.78-2.28-4.57-3.42-8.35-3.42c-4.57,0-8.24,1.53-11.02,4.59
+		c-2.78,3.06-4.18,7.1-4.18,12.11v47.26H520.9v-60.46c0-9.13-0.45-17.26-1.34-24.38h28.39l1.5,12.53
+		c3.23-4.79,7.24-8.46,12.02-11.02c4.79-2.56,10.19-3.84,16.2-3.84c10.02,0,17.51,3.03,22.46,9.1c4.95,6.07,7.43,15.23,7.43,27.47
+		V595.34z M683.23,594.17c-4.12,1.67-9.35,2.5-15.7,2.5c-11.47,0-20.18-3.23-26.14-9.69c-5.96-6.46-8.93-15.42-8.93-26.89v-27.39
+		H616.6V510.5h15.87v-19.21l30.23-9.69v28.89h20.37v22.21h-20.37v27.39c0,4.01,1.19,7.04,3.59,9.1c2.39,2.06,5.37,3.09,8.93,3.09
+		c2,0,4.68-0.33,8.02-1V594.17z M757.71,537.89c-4.79-2.23-9.41-3.34-13.86-3.34c-12.69,0-19.04,6.07-19.04,18.2v42.59h-30.23
+		v-60.46c0-9.13-0.45-17.26-1.34-24.38h28.39l1.84,14.2c2-5.23,5.23-9.24,9.69-12.02c4.45-2.78,9.46-4.18,15.03-4.18
+		c4.12,0,7.29,0.61,9.52,1.84V537.89z M843.05,555.92h-53.27c0.56,6.57,2.45,11.3,5.68,14.2c3.23,2.9,7.96,4.34,14.2,4.34
+		c4.23,0,8.46-0.69,12.69-2.09c4.23-1.39,8.07-3.31,11.52-5.76l7.68,20.04c-4.23,3.12-9.35,5.57-15.36,7.35
+		c-6.01,1.78-12.02,2.67-18.04,2.67c-9.69,0-18.09-1.78-25.22-5.34c-7.13-3.56-12.58-8.66-16.37-15.28
+		c-3.79-6.62-5.68-14.45-5.68-23.46c0-8.57,1.81-16.23,5.43-22.96c3.62-6.74,8.63-12,15.03-15.78c6.4-3.78,13.72-5.68,21.96-5.68
+		c8.02,0,15.03,1.78,21.04,5.34c6.01,3.56,10.63,8.66,13.86,15.28c3.23,6.63,4.84,14.34,4.84,23.13V555.92z M988.34,586.9
+		c-9.02,6.62-21.71,9.94-38.08,9.94c-8.91,0-17.7-1.17-26.39-3.51c-8.68-2.34-15.76-5.51-21.21-9.52l9.85-22.21
+		c5.79,3.67,11.94,6.49,18.45,8.43c6.51,1.95,13.05,2.92,19.62,2.92c6.68,0,11.8-0.92,15.36-2.76c3.56-1.84,5.34-4.42,5.34-7.77
+		c0-3.01-1.62-5.48-4.84-7.43c-3.23-1.95-9.3-3.87-18.2-5.76c-11.25-2.23-19.98-4.98-26.22-8.27c-6.24-3.28-10.6-7.15-13.11-11.61
+		c-2.51-4.45-3.76-9.85-3.76-16.2c0-7.24,2.06-13.78,6.18-19.62c4.12-5.85,9.91-10.41,17.37-13.69c7.46-3.28,15.98-4.93,25.55-4.93
+		c8.57,0,16.89,1.2,24.97,3.59c8.07,2.4,14.39,5.54,18.95,9.44l-9.69,22.21c-5.23-3.67-10.74-6.48-16.53-8.43
+		c-5.79-1.95-11.58-2.92-17.37-2.92c-5.68,0-10.25,1.09-13.69,3.26c-3.45,2.17-5.18,5.09-5.18,8.77c0,2,0.61,3.67,1.84,5.01
+		c1.22,1.34,3.51,2.65,6.85,3.93c3.34,1.28,8.35,2.65,15.03,4.09c10.8,2.34,19.29,5.15,25.47,8.43c6.18,3.28,10.55,7.13,13.11,11.52
+		c2.56,4.4,3.84,9.66,3.84,15.78C1001.87,571.18,997.36,580.28,988.34,586.9z M1101.07,575.88c-3.79,6.62-9.16,11.75-16.11,15.36
+		c-6.96,3.62-15.11,5.43-24.47,5.43c-9.46,0-17.7-1.78-24.72-5.34c-7.01-3.56-12.42-8.68-16.2-15.36
+		c-3.79-6.68-5.68-14.53-5.68-23.55c0-9.02,1.89-16.87,5.68-23.55c3.78-6.68,9.18-11.8,16.2-15.36c7.01-3.56,15.25-5.34,24.72-5.34
+		c9.35,0,17.51,1.81,24.47,5.43c6.96,3.62,12.33,8.74,16.11,15.36c3.78,6.62,5.68,14.45,5.68,23.46
+		C1106.75,561.44,1104.85,569.26,1101.07,575.88z M1206.28,595.34h-29.56v-11.36c-5.46,8.46-13.53,12.69-24.21,12.69
+		c-10.8,0-18.85-3.01-24.13-9.02c-5.29-6.01-7.93-15.2-7.93-27.56v-49.6h30.23v50.44c0,8.35,3.62,12.53,10.86,12.53
+		c4.23,0,7.65-1.5,10.27-4.51c2.61-3.01,3.92-7.01,3.92-12.02V510.5h30.56V595.34z M1287.44,537.89c-4.79-2.23-9.41-3.34-13.86-3.34
+		c-12.69,0-19.04,6.07-19.04,18.2v42.59h-30.23v-60.46c0-9.13-0.45-17.26-1.34-24.38h28.39l1.84,14.2c2-5.23,5.23-9.24,9.69-12.02
+		c4.45-2.78,9.46-4.18,15.03-4.18c4.12,0,7.29,0.61,9.52,1.84V537.89z M1326.52,568.53c3.34,3.62,8.18,5.43,14.53,5.43
+		c3.68,0,7.49-0.72,11.44-2.17c3.95-1.45,7.43-3.39,10.44-5.85l7.68,20.54c-3.67,3.23-8.55,5.74-14.61,7.52
+		c-6.07,1.78-12.55,2.67-19.46,2.67c-14.36,0-25.61-3.9-33.74-11.69c-8.13-7.79-12.19-18.43-12.19-31.9
+		c0-8.91,1.98-16.76,5.93-23.55c3.95-6.79,9.49-12.05,16.62-15.78c7.12-3.73,15.36-5.59,24.72-5.59c6.23,0,12.36,0.92,18.37,2.76
+		c6.01,1.84,10.8,4.32,14.36,7.43l-7.68,20.88c-3.01-2.45-6.51-4.4-10.52-5.85c-4.01-1.45-7.85-2.17-11.52-2.17
+		c-6.24,0-11.02,1.78-14.36,5.34c-3.34,3.56-5.01,8.85-5.01,15.87C1321.51,559.54,1323.18,564.92,1326.52,568.53z M1458.79,555.92
+		h-53.27c0.55,6.57,2.45,11.3,5.68,14.2c3.23,2.9,7.96,4.34,14.2,4.34c4.23,0,8.46-0.69,12.69-2.09c4.23-1.39,8.07-3.31,11.52-5.76
+		l7.68,20.04c-4.23,3.12-9.35,5.57-15.36,7.35c-6.01,1.78-12.02,2.67-18.04,2.67c-9.69,0-18.09-1.78-25.22-5.34
+		c-7.13-3.56-12.58-8.66-16.37-15.28c-3.79-6.62-5.68-14.45-5.68-23.46c0-8.57,1.81-16.23,5.43-22.96c3.62-6.74,8.63-12,15.03-15.78
+		c6.4-3.78,13.72-5.68,21.96-5.68c8.02,0,15.03,1.78,21.04,5.34c6.01,3.56,10.63,8.66,13.86,15.28c3.23,6.63,4.84,14.34,4.84,23.13
+		V555.92z" />
+                <path class="st0" d="M1060.49,530.87c-5.57,0-9.74,1.75-12.53,5.26c-2.78,3.51-4.18,8.93-4.18,16.28c0,7.46,1.39,12.94,4.18,16.45
+		c2.78,3.51,6.96,5.26,12.53,5.26c10.91,0,16.37-7.24,16.37-21.71c0-7.35-1.36-12.78-4.09-16.28
+		C1070.03,532.63,1065.94,530.87,1060.49,530.87z" />
+                <path class="st0"
+                    d="M467.96,528.87c-7.46,0-12.14,4.34-14.03,13.03h27.05C479.88,533.21,475.53,528.87,467.96,528.87z" />
+                <path class="st0"
+                    d="M804.14,528.87c-7.46,0-12.14,4.34-14.03,13.03h27.05C816.05,533.21,811.71,528.87,804.14,528.87z" />
+                <path class="st0"
+                    d="M1419.88,528.87c-7.46,0-12.14,4.34-14.03,13.03h27.06C1431.79,533.21,1427.45,528.87,1419.88,528.87z" />
+            </g>
+        </svg>
+
+
     </section>
     <section class="mt-5 contentsection ">
         <div class="container">
             <div class="row maybefirst">
-                <div class="col-md-5 mb-3 contentonly">
+                <div data-aos="fade-right" data-aos-offset="300"data-aos-easing="ease-in-sine" class="col-md-5 mb-3 contentonly ">
                     <h2 class="mb-2">Company Culture</h2>
                     <h1 class="mb-4">Where abilities know no bounds </h1>
                     <p class="mb-5">Headed by a young and vibrant team, Centre Source is a result oriented digital
@@ -163,12 +245,12 @@
                     <a class="" href="">Know Us</a>
 
                 </div>
-                <div class="col-md-7 mb-3 ">
+                <div class="col-md-7 mb-3 " data-aos="fade-left" data-aos-offset="300"data-aos-easing="ease-in-sine">
                     <img class="fmove" src="./img/people.png" alt="">
 
                 </div>
             </div>
-            <div class="row mt-5 mb-5">
+            <div class="row mt-5 mb-5 thirdsanim">
                 <div class="col-md-7 sahpinside">
                     <img src="./img/girslphoto.png" alt="">
 
