--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
             position: absolute;
             top: 0;
         }
+        .contentsection{
+            height: 100vh;
+            overflow: hidden;
+            position: relative;
+        }
+        .contentsection .thirdsanim{
+           position: absolute;
+           top: 0;
+        }
     </style>
 </head>
 
@@ -235,7 +244,7 @@
     <section class="mt-5 contentsection ">
         <div class="container">
             <div class="row maybefirst">
-                <div data-aos="fade-right" data-aos-offset="300"data-aos-easing="ease-in-sine" class="col-md-5 mb-3 contentonly ">
+                <div  class="col-md-5 mb-3 leftcontent "data-aos="fade-right" data-aos-duration="2000">
                     <h2 class="mb-2">Company Culture</h2>
                     <h1 class="mb-4">Where abilities know no bounds </h1>
                     <p class="mb-5">Headed by a young and vibrant team, Centre Source is a result oriented digital
@@ -245,17 +254,17 @@
                     <a class="" href="">Know Us</a>
 
                 </div>
-                <div class="col-md-7 mb-3 " data-aos="fade-left" data-aos-offset="300"data-aos-easing="ease-in-sine">
+                <div class="col-md-7 mb-3 " data-aos="fade-left" data-aos-duration="2000" >
                     <img class="fmove" src="./img/people.png" alt="">
 
                 </div>
             </div>
             <div class="row mt-5 mb-5 thirdsanim">
                 <div class="col-md-7 sahpinside">
-                    <img src="./img/girslphoto.png" alt="">
+                    <img class="bmove" src="./img/girslphoto.png" alt="">
 
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 rightmain">
                     <h2 class="mb-2">Views of CS</h2>
                     <h1 class="mb-4">Leave an impression with pivotal- moments</h1>
                     <p class="mb-5">Headed by a young and vibrant team, Centre Source is a result oriented digital
@@ -326,7 +335,7 @@
                             <img src="./img/domore.png" alt="">
 
                         </div>
-                        <div class="col-md-7">
+                        <div class="col-md-7 ">
                             <h2 class="mb-2 mt-3">How to make a website look more attractive with llustrations</h2>
                             <p class="mb-3">Runway heading towards a streamlined cloud solution. User generated content
                                 in
