--- a/test.html
+++ b/test.html
@@ -1,184 +1,209 @@
-<div class="footer pt-5">
-    <div class="container ">
-        <div class="row ">
-            <div class="col-md-4 address">
-                <img class="mb-2" src="../img/homelogo.png" alt="">
-                <div class="row">
-                    <a class="mb-2 add" href="#">8819 Ohio St. South Gate, CA 90280</a>
-                    <a class="mb-2 num" href="#">+1 386-688-3295</a>
-                    <a class="mb-2 gamil" href="#">info@centresource.in</a>
-                </div>
-                <h6 class="mb-2">
-                    <strong>Our Social Media</strong>
-                </h6>
-                <div class="social">
-                    <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    <a href=""><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
-                    <a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                    <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                    <a href=""><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
-                </div>
-                <h6 class="mb-2 mt-4"><strong>Service</strong></h6>
-                <ul class="navbar-nav justify-content-end">
-                    <li class="nav-item mb-2">
-                        <a aria-current="page" href="#">UI/UX Design</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">Web Development</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">Mobile Development</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">IT Consultancy</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a class="active" href="#">Database Security</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a class="active" href="#">QA Testing</a>
-                    </li>
-
-                </ul>
-
-
-            </div>
-            <div class="col-md-4">
-                <h6 class="mb-2"><strong>Service</strong></h6>
-                <ul class="navbar-nav justify-content-end">
-                    <li class="nav-item mb-2">
-                        <a aria-current="page" href="#">UI/UX Design</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">Web Development</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">Mobile Development</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">IT Consultancy</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a class="active" href="#">Database Security</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a class="active" href="#">QA Testing</a>
-                    </li>
-
-                </ul>
-                <h6 class="mb-2 mt-4"><strong>Service</strong></h6>
-                <ul class="navbar-nav justify-content-end">
-                    <li class="nav-item mb-2">
-                        <a aria-current="page" href="#">UI/UX Design</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">Web Development</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">Mobile Development</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">IT Consultancy</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a class="active" href="#">Database Security</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a class="active" href="#">QA Testing</a>
-                    </li>
-
-                </ul>
-                <h6 class="mb-2 mt-4"><strong>Service</strong></h6>
-                <ul class="navbar-nav justify-content-end">
-                    <li class="nav-item mb-2">
-                        <a aria-current="page" href="#">UI/UX Design</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">Web Development</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">Mobile Development</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">IT Consultancy</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a class="active" href="#">Database Security</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a class="active" href="#">QA Testing</a>
-                    </li>
-
-                </ul>
-
-            </div>
-            <div class="col-md-4">
-                <h6 class="mb-2"><strong>Company</strong></h6>
-                <ul class="navbar-nav justify-content-end">
-                    <li class="nav-item mb-2">
-                        <a aria-current="page" href="#">Features</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">Our Team</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">Portfolio</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">Blog</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a class="active" href="#">Contact Us</a>
-                    </li>
-
-
-                </ul>
-                <h6 class="mb-2"><strong>Company</strong></h6>
-                <ul class="navbar-nav justify-content-end">
-                    <li class="nav-item mb-2">
-                        <a aria-current="page" href="#">Features</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">Our Team</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">Portfolio</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a href="#">Blog</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a class="active" href="#">Contact Us</a>
-                    </li>
-
-
-                </ul>
-
-            </div>
-
-        </div>
-        <div class="row mt-5 topline">
-            <div class="col-md-5">
-                <h5 class="mb-2 mt-4">Copyright Centresource Consultancy Services</h5>
-            </div>
-            <div class="col-md-7 lastfooter text-end">
-                <ul class=" mb-2 mt-4">
-                    <li class="">
-                        <a aria-current="page" href="Knowus.html">Privacy Policy</a>
-                    </li>
-                    <li class="">
-                        <a href="Services.html">Terms of Service</a>
-                    </li>
-                    <li class="">
-                        <a href="insight.html">Acceptable User Policy</a>
-                    </li>
-                    <li class="">
-                        <a href="chronicles.html">NDA</a>
-                    </li>
-                </ul>
-            </div>
-
-        </div>
-    </div>
-
-</div>
+<?php
+namespace Siddibio\Velocity\Http\Controllers\Shop\Customer;
+use Illuminate\Routing\Controller;
+use Siddibio\Velocity\Helpers\Helper;
+use Illuminate\Http\Request;
+use Illuminate\Http\Response;
+use Siddibio\Customer\Repositories\CustomerAddressRepository;
+use Siddibio\Customer\Rules\VatIdRule;
+use Auth;
+use Twilio\Rest\Client;
+use Twilio\Exceptions\RestException ;
+class AddressController extends Controller
+{
+    /**
+     * Contains route related configuration
+     *
+     * @var array
+     */
+    protected $_config;
+    /**
+     * CustomerAddressRepository object
+     *
+     * @var \Siddibio\Customer\Repositories\CustomerAddressRepository
+     */
+    protected $customerAddressRepository;
+    /**
+     * Create a new controller instance.
+     *
+     * @param  \Siddibio\Customer\Repositories\CustomerAddressRepository  $customerAddressRepository
+     * @return void
+     */
+    public function __construct(CustomerAddressRepository $customerAddressRepository)
+    {
+        $this->middleware('customer');
+        $this->_config = request('_config');
+        $this->customerAddressRepository = $customerAddressRepository;
+        $this->customer = auth()->guard(core()->getGuard())->user();
+    }
+    /**
+     * Address Route index page
+     *
+     * @return \Illuminate\View\View
+     */
+    public function index()
+    {
+        return view($this->_config['view'])->with('addresses', $this->customer->addresses);
+    }
+    /**
+     * Show the address create form
+     *
+     * @return \Illuminate\View\View
+     */
+    public function create()
+    {
+        return view($this->_config['view'], [
+            'defaultCountry' => config('app.default_country'),
+        ]);
+    }
+    /**
+     * Create a new address for customer.
+     *
+     * @return view
+     */
+    public function store()
+    {
+        //request()->merge(['address1' => implode(PHP_EOL, array_filter(request()->input('address1')))]);
+        $data = collect(request()->input())->except('_token')->toArray();
+        // $this->validate(request(), [
+        //     'company_name' => 'string',
+        //     'first_name'   => 'string|required',
+        //     'last_name'    => 'string|required',
+        //     'address1'     => 'string|required',
+        //     'country'      => 'string|required',
+        //     'state'        => 'string|required',
+        //     'city'         => 'string|required',
+        //     'postcode'     => 'required',
+        //     'phone'        => 'required',
+        //     'vat_id'       => new VatIdRule(),
+        // ]);
+        $cust_id['customer_id'] = $this->customer->id;
+        $cust_id['first_name'] = $this->customer->first_name;
+        $cust_id['last_name'] = $this->customer->last_name;
+        $data = array_merge($cust_id, $data);
+        if ($this->customer->addresses->count() == 0) {
+            $data['default_address'] = 1;
+        }
+        if ($this->customerAddressRepository->create($data)) {
+            $recipient=("+91".$data['phone']);
+            try{
+                $this->sendMessage('User registration successful!!', $recipient);
+            }
+            catch(RestException $e){
+                session()->flash('error', trans('shop::app.customer.account.address.create.error'));
+            }
+            session()->flash('success', trans('shop::app.customer.account.address.create.success'));
+            return redirect()->route($this->_config['redirect']);
+        } else {
+            session()->flash('error', trans('shop::app.customer.account.address.create.error'));
+            return redirect()->back();
+        }
+    }
+    /**
+     * Sends sms to user using Twilio's programmable sms client
+     * @param String $message Body of sms
+     * @param Number $recipients string or array of phone number of recepient
+     */
+    private function sendMessage($message, $recipients)
+    {
+        $account_sid = env("TWILIO_SID");
+        $auth_token = env("TWILIO_AUTH_TOKEN");
+        $twilio_number = env("TWILIO_NUMBER");
+        $client = new Client($account_sid, $auth_token);
+        $client->messages->create(
+            $recipients,
+            ['from' => $twilio_number, 'body' => $message]
+        );
+    }
+    /**
+     * For editing the existing addresses of current logged in customer
+     *
+     * @return \Illuminate\View\View
+     */
+    public function edit($id)
+    {
+        $address = $this->customerAddressRepository->findOneWhere([
+            'id'          => $id,
+            'customer_id' => auth()->guard(core()->getGuard())->user()->id,
+        ]);
+        $addresses = $this->customer->addresses;
+        if (!$address) {
+            abort(404);
+        }
+        return view($this->_config['view'], array_merge(compact('address', 'addresses'), [
+            'defaultCountry' => config('app.default_country')
+        ]));
+    }
+    /**
+     * Edit's the premade resource of customer called Address.
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function update($id)
+    {
+        //request()->merge(['address1' => implode(PHP_EOL, array_filter(request()->input('address1')))]);
+        // $this->validate(request(), [
+        //     'company_name' => 'string',
+        //     'first_name'   => 'string|required',
+        //     'last_name'    => 'string|required',
+        //     'address1'     => 'string|required',
+        //     'country'      => 'string|required',
+        //     'state'        => 'string|required',
+        //     'city'         => 'string|required',
+        //     'postcode'     => 'required',
+        //     'phone'        => 'required',
+        //     'vat_id'       => new VatIdRule(),
+        // ]);
+        $data = collect(request()->input())->except('_token')->toArray();
+        $addresses = $this->customer->addresses;
+        foreach ($addresses as $address) {
+            if ($id == $address->id) {
+                session()->flash('success', trans('shop::app.customer.account.address.edit.success'));
+                $this->customerAddressRepository->update($data, $id);
+                if (isset(request()->change) && request()->change == 1)
+                    return redirect()->route('shop.checkout.onepage.index');
+                else
+                    return redirect()->route('customer.address.index');
+            }
+        }
+        session()->flash('warning', trans('shop::app.security-warning'));
+        return redirect()->route('customer.address.index');
+    }
+    /**
+     * To change the default address or make the default address,
+     * by default when first address is created will be the default address
+     *
+     * @return \Illuminate\Http\Response
+     */
+    public function makeDefault($id)
+    {
+        if ($default = $this->customer->default_address) {
+            $this->customerAddressRepository->find($default->id)->update(['default_address' => 0]);
+        }
+        if ($address = $this->customerAddressRepository->find($id)) {
+            $address->update(['default_address' => 1]);
+        } else {
+            session()->flash('success', trans('shop::app.customer.account.address.index.default-delete'));
+        }
+        return redirect()->back();
+    }
+    /**
+     * Delete address of the current customer
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function destroy($id)
+    {
+        $address = $this->customerAddressRepository->findOneWhere([
+            'id'          => $id,
+            'customer_id' => auth()->guard(core()->getGuard())->user()->id,
+        ]);
+        if (!$address) {
+            abort(404);
+        }
+        $this->customerAddressRepository->delete($id);
+        session()->flash('success', trans('shop::app.customer.account.address.delete.success'));
+        return redirect()->route('customer.address.index');
+    }
